--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -1,7 +1,8 @@
 # 0. ubuntu:22.04をベースにする
 FROM ubuntu:22.04
 
-# 1. command_tutorialディレクトリをルートディレクトリに作成
+# 1. command_tutorialディレクトリをルートディレクトリに作成して
+#    そのなかにfirstvi.txtを作成
 RUN mkdir /command_tutorial
 RUN touch /command_tutorial/firstvi.txt
 
@@ -50,4 +51,5 @@ RUN echo "myuser:mypass" | chpasswd
 RUN echo "root:rootpass" | chpasswd
 
 # 8. 起動時コマンドの指定
+# (startup.sh のコピーコマンドは削除)
 CMD apachectl -D FOREGROUND
